--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/poop_avoiding.loader.js";
       var config = {
-        dataUrl: buildUrl + "/poop_avoiding.data.br",
-        frameworkUrl: buildUrl + "/poop_avoiding.framework.js.br",
-        codeUrl: buildUrl + "/poop_avoiding.wasm.br",
+        dataUrl: buildUrl + "/poop_avoiding.data",
+        frameworkUrl: buildUrl + "/poop_avoiding.framework.js",
+        codeUrl: buildUrl + "/poop_avoiding.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "poop avoiding",
